--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "razorpay": "^2.9.2",
     "react-razorpay": "^2.0.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.1"
   }
 }
